[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "google-generativeai>=0.8.5",
    "pydub>=0.25.1",
    "requests>=2.32.4",
    "speechrecognition>=3.14.3",
    "telegram>=0.0.1",
]
